FACES-2662 Develop tests for the Liferay Faces JSF Showcase (removed overflow: hidden; since it hid alloy:inputDate popover overflow. Added clear: both; to showcase-results to ensure that alloy examples don't overflow into model value box)

--- a/jsf-showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/jsf-showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -103,10 +103,6 @@
 	display: inline;
 }
 
-.showcase-example {
-	overflow: hidden;
-}
-
 .showcase-example,.showcase-attribute-value,.showcase-parameter-value,.showcase-model-value,.showcase-container {
 	border: 1px solid #ddd;
 	-webkit-border-radius: 4px;
@@ -146,6 +142,10 @@
 	border-style: dotted;
 	border-width: 1px;
 	text-align: center;
+}
+
+.showcase-results {
+	clear: both;
 }
 
 .aui .nav .nav {
